fixed navbar font and spacing

--- a/about_us.css
+++ b/about_us.css
@@ -1,18 +1,25 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "DM Sans", sans-serif;
+    /* for some reason, adding this line actually makes another font (probably the Bootstrap font) be applied instead */
+    /* font-family: "DM Sans", sans-serif; */
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+body {
+    background: linear-gradient(#e0f7fa, rgba(91, 164, 252, 0.5));
+}
+
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(#e0f7fa, rgba(91, 164, 252, 0.5)), url(images/background_blue.png);
+    /* background-image: linear-gradient(#e0f7fa, rgba(91, 164, 252, 0.5)), url(images/background_blue.png); */
+    background: linear-gradient(#e0f7fa, rgba(91, 164, 252, 0.5));
     background-position: center;
     background-size: cover;
     position: relative;
-    padding-top: 20px;
+    /* padding-top: 10px; */
 }
 
 /* Old navbar styles */
